# bevy_playground

./: Cargo.toml
assets/: level_01.glb
assets/shaders/: compute.wgsl  gpu_readback.wgsl  hello.wgsl  slice.wgsl  sphere.wgsl  voxels.wgsl
src/: assets.rs  camera.rs  compute.rs  debug.rs  gen_voxels.rs  lib.rs  loading.rs  main.rs  marching_cube.rs  readback.rs  shader.rs  temp.rs  terrain_gen.rs
src/shader/: exm.rs  generate.rs  render.rs  slib.rs  vertices.rs
