[package]
name = "bevy_playground"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
tracing = "0.1.41"
iyes_perf_ui = { git="https://github.com/IyesGames/iyes_perf_ui", rev = "d8f3cbb" }
bevy_asset_loader = { version = "0.22.0", features = ["3d", "progress_tracking"] }
iyes_progress = { version = "0.13.0", features = ["assets"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
