[package]
name = "bevy_playground"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
# bevy = { version = "0.15", features = ["dynamic_linking"] }
bevy = "0.15"
tracing = "0.1.41"
noise = "0.9.0"
bevy_panorbit_camera = { version = "0.21.1", features = ["bevy_egui"] }
bevy_egui = "0.31.1"
itertools = "0.13.0"
uuid = { version = "1.11.0", features = ["v4"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[dev-dependencies]
rstest = "0.23.0"
